--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@ffmpeg/util": "^0.12.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
+    "@stagewise-plugins/react": "^0.4.8",
+    "@stagewise/toolbar-react": "^0.4.8",
     "@tanstack/react-query": "^5.66.8",
     "axios": "^1.7.9",
     "react": "^19.0.0",
