--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^19.0.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.2.0",
-    "react-spring": "^10.0.3"
+    "react-spring": "^10.0.3",
+    "ts-pattern": "^5.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
