--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,3 +12,21 @@ FASTWHISPER_COMPUTE_TYPE=int8
 ENABLE_SPEAKER_DIARIZATION=true
 MIN_SPEAKERS=1
 MAX_SPEAKERS=10
+
+# LLM Settings
+# Choose: local (Ollama) or groq
+DEFAULT_LLM_PROVIDER=local
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2:3b
+
+# Groq API Settings (optional - for cloud LLM)
+GROQ_API_KEY=your_groq_api_key_here
+GROQ_MODEL=llama-3.1-70b-versatile
+
+# OpenAI API Settings (optional)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_MODEL=gpt-4
+
+# Anthropic API Settings (optional)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
