--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,4 +15,9 @@ transformers==4.38.2
 numpy==1.26.4
 pyannote.audio==3.1.1
 faster-whisper==1.2.1
-av==13.1.0 
+av==13.1.0
+
+# LLM and RAG dependencies
+sentence-transformers==2.2.2
+chromadb==0.4.22
+groq==0.4.2 
