--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-player": "^2.16.0",
     "react-router-dom": "^7.2.0",
     "react-spring": "^10.0.3",
+    "react-markdown": "^9.0.1",
     "ts-pattern": "^5.9.0"
   },
   "devDependencies": {
