--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,10 @@ static/screenshots/
 transcriptions.db
 backend/transcriptions.db
 
+# Vector database (ChromaDB)
+chroma_db/
+backend/chroma_db/
+
 # Video and audio files
 static/videos/
 *.mp4
