--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,7 +14,7 @@ MIN_SPEAKERS=1
 MAX_SPEAKERS=10
 
 # LLM Settings
-# Choose: local (Ollama) or groq
+# Choose: local (Ollama), groq, openai, anthropic, or grok
 DEFAULT_LLM_PROVIDER=local
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.2:3b
@@ -30,3 +30,8 @@ OPENAI_MODEL=gpt-4
 # Anthropic API Settings (optional)
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
+
+# xAI Grok API Settings (optional)
+# Get your API key from: https://console.x.ai/
+XAI_API_KEY=your_xai_api_key_here
+XAI_MODEL=grok-beta
