Implement CORS configuration and update API URL handling across frontend components. Add support for dynamic CORS origins in the backend settings, and refactor frontend components to utilize a centralized API base URL, enhancing flexibility for different environments.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,6 +3,12 @@
 # Accept pyannote conditions at: https://huggingface.co/pyannote/speaker-diarization
 HUGGINGFACE_TOKEN=your_token_here
 
+# CORS Configuration
+# Allowed origins for CORS (JSON array format)
+# For development: CORS_ORIGINS=["http://localhost:5173"]
+# For production: CORS_ORIGINS=["https://myapp.vercel.app","https://app.example.com"]
+CORS_ORIGINS=["http://localhost:5173"]
+
 # Whisper Model Configuration
 FASTWHISPER_MODEL=small
 FASTWHISPER_DEVICE=cpu
