--- a/backend/Dockerfile.railway
+++ b/backend/Dockerfile.railway
@@ -22,11 +22,12 @@ RUN mkdir -p /data/static/videos \
     /data/db
 
 # Copy requirements first to leverage Docker cache
-COPY requirements.txt .
+# Use Railway-optimized requirements (without heavy ML dependencies)
+COPY requirements-railway.txt .
 
 # Install Python dependencies
 # Use --no-cache-dir to reduce image size
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r requirements-railway.txt
 
 # Copy the rest of the application
 COPY . .
