--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv==1.0.0
 openai==1.12.0
 httpx>=0.24.1
 moviepy==1.0.3
+ffmpeg-python>=0.2.0
 tqdm==4.66.1
 nltk>=3.9.1,<4.0.0
 pydantic==2.5.2
