Implement database backend abstraction and enhance model loading
- Introduced an abstract base class for database backends, allowing support for both SQLite and Firestore.
- Refactored database operations to utilize the new backend structure, improving maintainability and scalability.
- Enhanced the PANNs model loading process to check for pre-downloaded checkpoints, reducing runtime downloads.
- Added error handling for emotion model loading failures, allowing graceful degradation.
- Updated Dockerfile to include wget for downloading models and created a dedicated download script for PANNs and emotion models.

This change optimizes the database management and model loading processes, improving overall application performance and reliability.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,11 +11,12 @@ WORKDIR /app
 ENV HF_HOME=/app/.cache/huggingface
 ENV TRANSFORMERS_CACHE=/app/.cache/huggingface
 
-# Install system dependencies including FFmpeg
+# Install system dependencies including FFmpeg and wget (for PANNs model download)
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     ffmpeg \
     build-essential \
+    wget \
     && rm -rf /var/lib/apt/lists/*
 # Create directories for persistent data
 # Railway will mount volumes to these paths
@@ -23,7 +24,8 @@ RUN mkdir -p /data/static/videos \
     /data/static/screenshots \
     /data/chroma_db \
     /data/db \
-    /app/.cache/huggingface
+    /app/.cache/huggingface \
+    /root/panns_data
 
 # Copy requirements first to leverage Docker cache
 COPY requirements.txt .
