Enhance backend configuration and processing features
- Added a new section in CLAUDE.md detailing secrets in Secret Manager and LLM chat configuration for improved deployment clarity.
- Updated backend environment example to reflect the new XAI_MODEL setting.
- Modified deploy.sh to include the new XAI_MODEL environment variable and additional secrets for deployment.
- Integrated diagnostics router into the main application for enhanced monitoring capabilities.
- Improved screenshot URL handling in vector_store.py to ensure URLs are correctly formatted for frontend use.
- Enhanced transcription service to support batch processing with progress updates, optimizing translation efficiency.

These changes collectively improve the deployment process, enhance backend functionality, and streamline translation handling.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -40,4 +40,4 @@ ANTHROPIC_MODEL=claude-3-5-sonnet-20241022
 # xAI Grok API Settings (optional)
 # Get your API key from: https://console.x.ai/
 XAI_API_KEY=your_xai_api_key_here
-XAI_MODEL=grok-beta
+XAI_MODEL==example_model
