--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -38,3 +38,10 @@ google-cloud-firestore>=2.11.0
 
 # Supabase
 supabase>=2.0.0
+
+# Email sending
+aiosmtplib>=2.0.0
+email-validator>=2.0.0
+
+# Encryption (for API key encryption)
+cryptography>=41.0.0
