--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.45.0",
     "@tanstack/react-query": "^5.66.8",
     "axios": "^1.7.9",
+    "hash-wasm": "^4.11.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.6.0",
