--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -44,4 +44,4 @@ aiosmtplib>=2.0.0
 email-validator>=2.0.0
 
 # Encryption (for API key encryption)
-cryptography>=41.0.0
+cryptography>=41.0.0psutil>=5.9.0
