--- a/backend/cloudbuild.yaml
+++ b/backend/cloudbuild.yaml
@@ -5,6 +5,6 @@ steps:
     args: ['push', 'us-central1-docker.pkg.dev/ai-subs-poc/ai-subs-repo/ai-subs-backend:latest']
 images:
   - 'us-central1-docker.pkg.dev/ai-subs-poc/ai-subs-repo/ai-subs-backend:latest'
-timeout: '1200s'
+timeout: '2700s'  # 45 minutes (large image with ML models)
 options:
   machineType: 'E2_HIGHCPU_8'
